Fix missing margin

--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -9,6 +9,7 @@
     color: #fff;
     font-size: calc(1rem + 0.4vw);
     text-align: left;
+    margin-bottom: 20px;
 }
 
 .todo-wrapper div {
